--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -1,2 +1,2 @@
 all:
-	    gcc -o executable -std=c11 main.c model/IntDynamicArray.c model/IntDynamicArray.h model/IntHashSet.c model/IntHashSet.h controller/ConsoleController.c controller/ConsoleController.h
+	    gcc -lreadline -o executable -std=c11 main.c -Imodel -Icontroller model/IntDynamicArray.c model/IntDynamicArray.h model/IntHashSet.c model/IntHashSet.h model/Matrix.h model/Matrix.c controller/ConsoleController.c controller/ConsoleController.h
