--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -1,2 +1,25 @@
-all:
-	    gcc -lreadline -o executable -std=c11 main.c -Imodel -Icontroller model/IntDynamicArray.c model/IntDynamicArray.h model/IntHashSet.c model/IntHashSet.h model/Matrix.h model/Matrix.c controller/ConsoleController.c controller/ConsoleController.h
+CC=gcc
+CFLAGS= -Imodel -Icontroller -c -std=c99
+
+all: program
+
+program: ConsoleController.o IntDynamicArray.o IntHashSet.o Matrix.o main.o
+	$(CC) -lreadline ConsoleController.o IntDynamicArray.o IntHashSet.o Matrix.o main.o -o program
+
+main.o: main.c
+	$(CC) $(CFLAGS) main.c
+
+ConsoleController.o: controller/ConsoleController.c
+	$(CC) $(CFLAGS) controller/ConsoleController.c
+
+IntDynamicArray.o: model/IntDynamicArray.c
+	$(CC) $(CFLAGS) model/IntDynamicArray.c
+
+IntHashSet.o: model/IntHashSet.c
+	$(CC) $(CFLAGS) model/IntHashSet.c
+
+Matrix.o: model/Matrix.c
+	$(CC) $(CFLAGS) model/Matrix.c
+
+clean:
+	rm -rf *.o program
