--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -7,5 +7,17 @@ include_directories(console)
 include_directories(field)
 include_directories(math)
 include_directories(stack)
+include_directories(point)
 
-add_executable(lab2 main.c game/Game.c game/Game.h console/ConsoleUtil.c console/ConsoleUtil.h field/Field.c field/Field.h math/Math.c math/Math.h console/Color.h console/Color.c console/KeyboardInput.c console/KeyboardInput.h stack/Stack.h stack/StackVector.c stack/StackVector.h stack/StackList.c stack/StackList.h)
+add_executable(
+        lab2 main.c
+        game/Game.c
+        console/ConsoleUtil.c
+        field/Field.c
+        math/Math.c
+        console/Color.c
+        console/KeyboardInput.c
+        stack/StackVector.c
+        stack/StackList.c
+        point/Point.c
+)
