--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,37 +1,40 @@
 CC=gcc
-CFLAGS= -Iconsole -Ifield -Igame -Imath -Istack -c -std=c99
+CFLAGS=-c -std=c99
+LDFLAGS=-lreadline
+LIBFLAGS=-Llib -Wl,-Rlib
+DIRS=-Iconsole -Ifield -Igame -Ipoint -Istack
+SOURCES=main.c game/Game.c console/ConsoleUtil.c field/Field.c console/Color.c console/KeyboardInput.c point/Point.c
+OBJECTS=$(SOURCES:.c=.o)
+EXECUTABLE=program
+LIBS=libs
 
-all: program
+all: $(SOURCES) $(EXECUTABLE)
 
-program: Color.o KeyboardInput.o ConsoleUtil.o Field.o Game.o Math.o main.o
-	$(CC) Color.o KeyboardInput.o ConsoleUtil.o Field.o Game.o Math.o main.o -lreadline -Llib -Wl,-Rlib -lstacklist -o program
-
-main.o: main.c
-	$(CC) $(CFLAGS) main.c
-
-Color.o: console/Color.c
-	$(CC) $(CFLAGS) console/Color.c
-
-KeyboardInput.o: console/KeyboardInput.c
-	$(CC) $(CFLAGS) console/KeyboardInput.c
-
-ConsoleUtil.o: console/ConsoleUtil.c
-	$(CC) $(CFLAGS) console/ConsoleUtil.c
-
-Field.o: field/Field.c
-	$(CC) $(CFLAGS) field/Field.c
-
-Game.o: game/Game.c
-	$(CC) $(CFLAGS) game/Game.c
-
-Math.o: math/Math.c
-	$(CC) $(CFLAGS) math/Math.c
+.c.o:
+	$(CC) $(DIRS) $(CFLAGS) $< -o $@
 
 clean:
-	rm -rf *.o program
-// не должно быть двух массивов - новая структура данных для координат
-// убрать глобальные переменные
-// добавить ошибку при вставке
-// генерировать поле для пятнашек без запрещенных ситуаций
-// makefile не рабоче-крестьянский(добавить общие правила)
-// добавить библиотечную компиляцию make -C lib static VECTOR=1
+	find . -type f -name '*.o' -delete
+
+$(EXECUTABLE): $(OBJECTS)
+ifdef vector
+	@echo 'dynamic vector build'
+	make -C lib dynamic vector=1
+	$(CC) $(OBJECTS) $(LDFLAGS) $(LIBFLAGS) -lstackvector -o $@
+else
+	@echo 'dynamic list build'
+	make -C lib dynamic
+	$(CC) $(OBJECTS) $(LDFLAGS) $(LIBFLAGS) -lstacklist -o $@
+endif
+
+
+static: $(OBJECTS)
+ifdef vector
+	@echo 'static vector build'
+	make -C lib static vector=1
+	$(CC) $(OBJECTS) $(LDFLAGS) lib/stackvector.a -o program
+else
+	@echo 'static list build'
+	make -C lib static
+	$(CC) $(OBJECTS) $(LDFLAGS) lib/stacklist.a -o program
+endif
