--- a/lab2/lib/Makefile
+++ b/lab2/lib/Makefile
@@ -6,13 +6,25 @@ OBJECTS=$(SOURCES:.c=.o)
 DIRS=-I../point
 LDFLAGS=-shared
 
-all: $(OBJECTS) log
+all: $(OBJECTS)
 
-dynvector: StackVector.o ../point/Point.o
-	$(CC) $(DIRS) StackVector.o ../point/Point.o -shared -o libstackvector.so
+dynamic: $(OBJECTS)
+ifdef vector
+	@echo 'dynamic vector lib'
+	$(CC) StackVector.o ../point/Point.o -shared -o libstackvector.so
+else
+	@echo 'dynamic list lib'
+	$(CC) StackList.o ../point/Point.o -shared -o libstacklist.so
+endif
 
-dynlist: StackList.o ../point/Point.o
-	$(CC) $(DIRS) StackList.o ../point/Point.o -shared -o libstacklist.so
+static: $(OBJECTS)
+ifdef vector
+	@echo 'static vector lib'
+	ar rcs stackvector.a StackVector.o ../point/Point.o
+else
+	@echo 'static list lib'
+	ar rcs stacklist.a StackList.o ../point/Point.o
+endif
 
 .c.o:
 	$(CC) $(DIRS) $(CFLAGS) $< -o $@
