--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-c -std=c99
-DIRS=-I./ -Imodel/table -Imodel/keyspace/keyspace1 -Imodel/keyspace/keyspace2 -Imodel/table/item -Iview -Icontroller/keyspace
-SOURCES=Errors.h main.c model/table/Table.c model/keyspace/keyspace1/KeySpace1.c model/keyspace/keyspace2/KeySpace2.c model/keyspace/keyspace2/Key2.c model/table/CompositeKey.c model/table/item/Item.c model/table/item/Info.c view/Logger.c controller/keyspace/KeySpace1Controller.c model/keyspace/keyspace1/Item1.c model/keyspace/keyspace1/Key1.c controller/keyspace/IteratorKS1.c
+DIRS=-I./ -Imodel/table -Imodel/keyspace/keyspace1 -Imodel/keyspace/keyspace2 -Imodel/keyspace/item -Imodel/keyspace/key -Imodel/keyspace/keyspace2 -Iview -Icontroller/keyspace
+SOURCES=Errors.h main.c model/table/Table.c model/keyspace/keyspace1/KeySpace1.c model/keyspace/keyspace2/KeySpace2.c model/keyspace/key/Key.c model/keyspace/item/Item.c view/Logger.c controller/keyspace/KeySpaceController.c controller/keyspace/IteratorKS.c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLE=program
 
