--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
 project(lab3 C)
 
-set(CMAKE_C_STANDARD 99)
-
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_FLAGS "-lreadline")
 include_directories(model/table)
 include_directories(model/keyspace/keyspace1)
 include_directories(model/keyspace/keyspace2)
@@ -10,8 +10,10 @@ include_directories(model/keyspace/item)
 include_directories(model/keyspace/key)
 include_directories(view)
 include_directories(./)
-include_directories(controller/keyspace)
-add_executable(lab3 main.c
+include_directories(controller/iterator)
+include_directories(controller/dialog)
+add_executable(lab3
+        main.c
         model/table/Table.c
         model/keyspace/keyspace1/KeySpace1.c
         model/keyspace/keyspace2/KeySpace2.c
@@ -19,5 +21,7 @@ add_executable(lab3 main.c
         model/keyspace/item/Item.c
         view/Logger.c
         model/keyspace/key/Key.c
-        controller/keyspace/IteratorKS.c
-        model/keyspace/item/Waymark.c)
+        controller/iterator/IteratorKS.c
+        model/keyspace/item/Waymark.c
+        controller/dialog/Dialog.c
+        )
