--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-c -std=c99
-DIRS=-Imodel/table -Imodel/keyspace/keyspace1 -Imodel/keyspace/keyspace2 -Imodel/keyspace/item -Imodel/keyspace/key -Iview -I./ -Icontroller/iterator -Icontroller/dialog
-SOURCES=Errors.h main.c model/table/Table.c model/keyspace/keyspace1/KeySpace1.c model/keyspace/keyspace2/KeySpace2.c model/table/CompositeKey.c model/keyspace/item/Item.c view/Logger.c model/keyspace/key/Key.c controller/iterator/IteratorKS.c model/keyspace/item/Waymark.c controller/dialog/Dialog.c
+DIRS=-I./ -Imodel/table -Imodel/keyspace/container -Imodel/keyspace/node -Imodel/keyspace/keyspace1 -Imodel/keyspace/keyspace2 -Imodel/table/item -Imodel/keyspace/key
+SOURCES=Errors.h main.c model/keyspace/keyspace1/KeySpace1.c model/table/CompositeKey.c model/table/item/Item.c model/keyspace/key/Key.c model/keyspace/node/Node.c model/keyspace/container/Container.c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLE=program
 
