--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -22,8 +22,8 @@ add_executable(lab3
         model/keyspace/key/Key.c
         model/keyspace/node/Node.c
         model/keyspace/container/Container.c
+        model/keyspace/keyspace2/KeySpace2.c
         #        model/table/Table.c
-        #        model/keyspace/keyspace2/KeySpace2.c
         #        view/Logger.c
         #        controller/iterator/IteratorKS.c
         #        model/keyspace/container/Waymark.c
