add dialog table addition

--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -24,8 +24,7 @@ add_executable(lab3
         model/keyspace/container/Container.c
         model/keyspace/keyspace2/KeySpace2.c
         model/table/Table.c
-        #        view/Logger.c
-        #        controller/iterator/IteratorKS.c
-        #        model/keyspace/container/Waymark.c
-        #        controller/dialog/Dialog.c
+        view/Logger.c
+        controller/iterator/Iterator.c
+        controller/dialog/Dialog.c
         )
