--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -1,17 +1,17 @@
 CC=gcc
 CFLAGS=-c -std=c99
-DIRS=-I./ -Imodel/table -Imodel/keyspace/container -Imodel/keyspace/node -Imodel/keyspace/keyspace1 -Imodel/keyspace/keyspace2 -Imodel/table/item -Imodel/keyspace/key -Icontroller/dialog -Iview -Icontroller/iterator
-SOURCES=Errors.h main.c model/keyspace/keyspace1/KeySpace1.c model/table/CompositeKey.c model/table/item/Item.c model/keyspace/key/Key.c model/keyspace/node/Node.c model/keyspace/container/Container.c model/keyspace/keyspace2/KeySpace2.c model/table/Table.c view/Logger.c controller/iterator/Iterator.c controller/dialog/Dialog.c
+DIRS=-Imodel/tree/binary -Icontroller/graph
+SOURCES=main.c model/tree/binary/BinaryTree.c model/tree/binary/BNode.c controller/graph/GraphGenerator.c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLE=program
 
 all: $(SOURCES)  $(EXECUTABLE)
 
 .c.o:
-        @($(CC) $(DIRS) $(CFLAGS) $< -o $@)
+	@($(CC) $(DIRS) $(CFLAGS) $< -o $@)
 
 clean:
-        find . -type f -name '*.o' -delete
+	find . -type f -name '*.o' -delete
 
 $(EXECUTABLE): $(OBJECTS)
-        $(CC) $(OBJECTS) -lreadline -o $@%
+	$(CC) $(OBJECTS) -o $@
