--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -3,6 +3,7 @@ project(lab2)
 
 include_directories(lib/model)
 include_directories(lib/controller)
+add_subdirectory(test)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(lab2 main.cpp lib/controller/Dialog.cpp lib/controller/Dialog.h lib/model/Action.cpp lib/model/Action.h model/Cardioid.cpp model/Cardioid.h)
